--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
+    .menu-toggle {
+      display: none;
+      font-size: 2rem;
+      cursor: pointer;
+      padding: 1rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      nav.main-nav ul {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        background: var(--welcome-bg);
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        padding: 1rem;
+        z-index: 999;
+      }
+
+      nav.main-nav ul.show {
+        display: flex;
+      }
+    }
     html {
       scroll-behavior: smooth;
     }
@@ -33,9 +62,79 @@
     body.dark-mode .welcome-content p {
       color: #ffffff !important;
     }
+    /* Responsive global mobile optimization */
+    @media screen and (max-width: 768px) {
+      header .main-nav ul {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      header .main-nav ul li a {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+      }
+
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+
+      .hero p {
+        font-size: 1.2rem;
+      }
+
+      .cta {
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+      }
+
+      .welcome-content h1 {
+        font-size: 2rem;
+      }
+
+      .welcome-content p {
+        font-size: 1.1rem;
+      }
+
+      section h2 {
+        font-size: 1.6rem !important;
+      }
+
+      section p {
+        font-size: 1rem !important;
+      }
+
+      .stats-section {
+        gap: 2rem;
+        flex-direction: column;
+      }
+
+      .stat .counter {
+        font-size: 2rem;
+      }
+
+      .aurion-toggle {
+        bottom: 1rem;
+        right: 1rem;
+        padding: 0.6rem;
+        font-size: 1.2rem;
+      }
+
+      .aurion-panel {
+        bottom: 5rem;
+        right: 1rem;
+        width: 90%;
+        max-width: 320px;
+      }
+
+      footer.site-footer {
+        font-size: 0.9rem;
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
+  <div class="menu-toggle" id="menu-toggle" onclick="document.querySelector('nav ul').classList.toggle('show')">☰</div>
   <div id="particles-js"></div>
   <div id="loader">
     <div class="spinner"></div>
@@ -377,6 +476,11 @@
   <section class="seo-image">
     <img src="assets/logo-seo.png" alt="Logo Studio Rapido" width="512" height="512" style="display:none;" />
   </section>
+<script>
+  document.getElementById('menu-toggle').addEventListener('click', function () {
+    document.querySelector('nav ul').classList.toggle('show');
+  });
+</script>
 </body>
 <style>
   .aurion-panel {
