--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,9 @@
   <div id="loader">
     <div class="spinner"></div>
   </div>
+  <!-- Menu hamburger pour mobile -->
+  <div class="menu-toggle" id="menu-toggle">☰</div>
   <header>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
       <ul>
