--- a/a-propos.html
+++ b/a-propos.html
@@ -11,7 +11,11 @@
   <div id="particles-js"></div>
   <div id="loader"><div class="spinner"></div></div>
   <header>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <div class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
       <ul>
@@ -102,5 +106,13 @@
     });
   </script>
   <script src="script.js" defer></script>
+  <script>
+    function toggleMenu() {
+      const menu = document.querySelector("nav ul");
+      const toggle = document.getElementById("menu-toggle");
+      menu.classList.toggle("show");
+      toggle.classList.toggle("active");
+    }
+  </script>
 </body>
 </html>
