--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,11 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <div class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
       <ul>
@@ -167,6 +171,14 @@
   </footer>
 
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script>
+    function toggleMenu() {
+      const menu = document.querySelector("nav ul");
+      const toggle = document.getElementById("menu-toggle");
+      menu.classList.toggle("show");
+      toggle.classList.toggle("active");
+    }
+  </script>
   <script>
     ScrollReveal().reveal('section', {
       distance: '50px',
