--- a/contact.html
+++ b/contact.html
@@ -94,11 +94,7 @@
     <div class="spinner"></div>
   </div>
   <header>
-    <div class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
+    <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
       <ul>
@@ -172,12 +168,25 @@
 
   <script src="https://unpkg.com/scrollreveal"></script>
   <script>
-    function toggleMenu() {
-      const menu = document.querySelector("nav ul");
-      const toggle = document.getElementById("menu-toggle");
-      menu.classList.toggle("show");
-      toggle.classList.toggle("active");
-    }
+    // Nouveau menu accessible
+    const toggle = document.getElementById('menu-toggle');
+    const nav = document.querySelector('nav ul');
+
+    toggle.addEventListener('click', () => {
+      nav.classList.toggle('show');
+      toggle.textContent = nav.classList.contains('show') ? '✖' : '☰';
+      toggle.setAttribute('aria-expanded', nav.classList.contains('show'));
+    });
+
+    document.querySelectorAll('nav ul li a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (nav.classList.contains('show')) {
+          nav.classList.remove('show');
+          toggle.textContent = '☰';
+          toggle.setAttribute('aria-expanded', false);
+        }
+      });
+    });
   </script>
   <script>
     ScrollReveal().reveal('section', {
@@ -188,11 +197,6 @@
       interval: 200
     });
 
-    const toggle = document.getElementById('menu-toggle');
-    const nav = document.querySelector('nav ul');
-    toggle.addEventListener('click', () => {
-      nav.classList.toggle('show');
-    });
 
     const darkToggle = document.getElementById('darkModeToggle');
 
