--- a/index.html
+++ b/index.html
@@ -141,13 +141,12 @@
   </style>
 </head>
 <body>
-  <div class="menu-toggle" id="menu-toggle">☰</div>
+  <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu">☰</button>
   <div id="particles-js"></div>
   <div id="loader">
     <div class="spinner"></div>
   </div>
   <header>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav class="main-nav" id="main-nav">
       <ul>
