--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,7 @@
     <div class="spinner"></div>
   </div>
   <!-- Menu hamburger pour mobile -->
-  <div class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-  </div>
+  <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false">☰</button>
   <header>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
     <nav>
@@ -64,8 +60,21 @@
 
     const toggle = document.getElementById('menu-toggle');
     const nav = document.querySelector('nav ul');
+
     toggle.addEventListener('click', () => {
       nav.classList.toggle('show');
+      toggle.textContent = nav.classList.contains('show') ? '✖' : '☰';
+      toggle.setAttribute('aria-expanded', nav.classList.contains('show'));
+    });
+
+    document.querySelectorAll('nav ul li a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (nav.classList.contains('show')) {
+          nav.classList.remove('show');
+          toggle.textContent = '☰';
+          toggle.setAttribute('aria-expanded', false);
+        }
+      });
     });
 
     const darkToggle = document.getElementById('darkModeToggle');
