--- a/index.html
+++ b/index.html
@@ -142,129 +142,129 @@
 </head>
 <body>
   <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu">☰</button>
-  <div id="particles-js"></div>
-  <div id="loader">
-    <div class="spinner"></div>
-  </div>
-  <header>
-    <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
-    <nav class="main-nav" id="main-nav">
-      <ul>
-        <li><a href="index.html" class="active">🏠 Accueil</a></li>
-        <li><a href="a-propos.html">ℹ️ À propos</a></li>
-        <li><a href="services.html">🧰 Services</a></li>
-        <li><a href="portfolio.html">🖼️ Portfolio</a></li>
-        <li><a href="tarifs.html">💰 Tarifs</a></li>
-        <li><a href="contact.html">📞 Contact & Devis</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="hero" class="hero">
-    <div class="hero-background"></div>
-    <div class="hero-content">
-      <h1 style="font-size: 3.2rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
-        🚀 Studio Rapido
-      </h1>
-      <p style="font-family: 'Outfit', sans-serif; font-size: 1.8rem; font-weight: 500; color: var(--text-color); text-shadow: 1px 1px 3px rgba(0,0,0,0.3); letter-spacing: 0.5px; font-style: italic;">
-        Ton univers digital sur-mesure : design animé, code intelligent & projets stylés.
-      </p>
-      <a href="#welcome" class="cta">✨ Entrer dans l’univers</a>
+  <div id="page-content" class="hidden">
+    <div id="particles-js"></div>
+    <div id="loader">
+      <div class="spinner"></div>
     </div>
-  </section>
+    <header>
+      <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
+      <nav class="main-nav">
+        <ul id="main-menu">
+          <li><a href="#accueil">Accueil</a></li>
+          <li><a href="a-propos.html">ℹ️ À propos</a></li>
+          <li><a href="services.html">🧰 Services</a></li>
+          <li><a href="portfolio.html">🖼️ Portfolio</a></li>
+          <li><a href="tarifs.html">💰 Tarifs</a></li>
+          <li><a href="contact.html">📞 Contact & Devis</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <section id="welcome" class="scroll-right">
-    <div class="welcome-overlay">
-      <div class="welcome-content">
-        <h1 style="font-size: 2.8rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
-          👋 Bienvenue chez Studio Rapido
+    <section id="hero" class="hero">
+      <div class="hero-background"></div>
+      <div class="hero-content">
+        <h1 style="font-size: 3.2rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
+          🚀 Studio Rapido
         </h1>
-        <p style="font-size: 1.6rem; font-weight: 500; font-style: italic; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">
-          Créateur de sites modernes, d’univers animés et d’IA sur mesure.
+        <p style="font-family: 'Outfit', sans-serif; font-size: 1.8rem; font-weight: 500; color: var(--text-color); text-shadow: 1px 1px 3px rgba(0,0,0,0.3); letter-spacing: 0.5px; font-style: italic;">
+          Ton univers digital sur-mesure : design animé, code intelligent & projets stylés.
         </p>
-        <a href="a-propos.html" class="cta">🔎 Découvrir À propos</a>
+        <a href="#welcome" class="cta">✨ Entrer dans l’univers</a>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="zoom-in">
-    <h2 style="font-size: 2.4rem; font-weight: 700; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 4px rgba(0,0,0,0.2);">🧪 Nos technologies</h2>
-    <p style="font-size: 1.4rem; font-family: 'Outfit', sans-serif; color: var(--text-color); font-style: italic; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
-      Nous utilisons des outils modernes pour créer des expériences immersives : HTML5, CSS3, JavaScript, IA, animations Web et plus encore.
-    </p>
-  </section>
+    <section id="welcome" class="scroll-right">
+      <div class="welcome-overlay">
+        <div class="welcome-content">
+          <h1 style="font-size: 2.8rem; font-weight: 700; font-family: 'Outfit', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); color: var(--text-color);">
+            👋 Bienvenue chez Studio Rapido
+          </h1>
+          <p style="font-size: 1.6rem; font-weight: 500; font-style: italic; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">
+            Créateur de sites modernes, d’univers animés et d’IA sur mesure.
+          </p>
+          <a href="a-propos.html" class="cta">🔎 Découvrir À propos</a>
+        </div>
+      </div>
+    </section>
 
-  <section class="fade-in">
-    <h2 style="font-size: 2.4rem; font-weight: 700; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 4px rgba(0,0,0,0.2);">🎯 Notre mission</h2>
-    <p style="font-size: 1.4rem; font-family: 'Outfit', sans-serif; color: var(--text-color); font-style: italic; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
-      Offrir à chacun un univers web interactif, intelligent et sur-mesure. Studio Rapido conçoit, développe et sublime vos idées numériques.
-    </p>
-  </section>
+    <section class="zoom-in">
+      <h2 style="font-size: 2.4rem; font-weight: 700; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 4px rgba(0,0,0,0.2);">🧪 Nos technologies</h2>
+      <p style="font-size: 1.4rem; font-family: 'Outfit', sans-serif; color: var(--text-color); font-style: italic; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
+        Nous utilisons des outils modernes pour créer des expériences immersives : HTML5, CSS3, JavaScript, IA, animations Web et plus encore.
+      </p>
+    </section>
 
-  <section id="stats" class="stats-section fade-in">
-    <div class="stat">
-      <div class="counter" data-target="27">0</div>
-      <p class="counter-label">🚀 Sites publiés</p>
-    </div>
-    <div class="stat">
-      <div class="counter" data-target="9">0</div>
-      <p class="counter-label">🧠 IA intégrées</p>
-    </div>
-    <div class="stat">
-      <div class="counter" data-target="17">0</div>
-      <p class="counter-label">🎨 Univers graphiques créés</p>
-    </div>
-    <div class="stat">
-      <div class="counter" data-target="4">0</div>
-      <p class="counter-label">📱 Prototypes iOS</p>
-    </div>
-    <div class="stat">
-      <div class="counter" data-target="6">0</div>
-      <p class="counter-label">🛠️ Projets freelance</p>
-    </div>
-    <div class="stat">
-      <div class="counter" data-target="10">0</div>
-      <p class="counter-label">🧩 Templates créés</p>
-    </div>
-  </section>
+    <section class="fade-in">
+      <h2 style="font-size: 2.4rem; font-weight: 700; font-family: 'Outfit', sans-serif; color: var(--text-color); text-shadow: 1px 1px 4px rgba(0,0,0,0.2);">🎯 Notre mission</h2>
+      <p style="font-size: 1.4rem; font-family: 'Outfit', sans-serif; color: var(--text-color); font-style: italic; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
+        Offrir à chacun un univers web interactif, intelligent et sur-mesure. Studio Rapido conçoit, développe et sublime vos idées numériques.
+      </p>
+    </section>
 
-  <section class="stats-explanation fade-in">
-    <h2>📊 Explication des statistiques</h2>
-    <details>
-      <summary>🚀 Sites publiés</summary>
-      <p>Sites mis en ligne : portfolio, projets clients, démos, etc. Montre ta maîtrise du déploiement web.</p>
-    </details>
-    <details>
-      <summary>🧠 IA intégrées</summary>
-      <p>Intégration d'intelligences artificielles comme ChatGPT, assistants vocaux, IA locales (LLaMA, Mistral), etc.</p>
-    </details>
-    <details>
-      <summary>🎨 Univers graphiques créés</summary>
-      <p>Création d'interfaces, animations, effets, dark mode, design UI/UX immersif avec ta propre touche artistique.</p>
-    </details>
-    <details>
-      <summary>📱 Prototypes iOS</summary>
-      <p>Projets développés sur Xcode (SwiftUI) incluant des assistants, animations, UI futuristes et domotique.</p>
-    </details>
-    <details>
-      <summary>🛠️ Projets freelance</summary>
-      <p>Sites vitrine, refonte visuelle, projets clients en auto-entreprise avec maquettes, devis et livraison.</p>
-    </details>
-    <details>
-      <summary>🧩 Templates créés</summary>
-      <p>Composants HTML/CSS/JS réutilisables : boutons animés, menus, sections stylées, dark mode, etc.</p>
-    </details>
-  </section>
+    <section id="stats" class="stats-section fade-in">
+      <div class="stat">
+        <div class="counter" data-target="27">0</div>
+        <p class="counter-label">🚀 Sites publiés</p>
+      </div>
+      <div class="stat">
+        <div class="counter" data-target="9">0</div>
+        <p class="counter-label">🧠 IA intégrées</p>
+      </div>
+      <div class="stat">
+        <div class="counter" data-target="17">0</div>
+        <p class="counter-label">🎨 Univers graphiques créés</p>
+      </div>
+      <div class="stat">
+        <div class="counter" data-target="4">0</div>
+        <p class="counter-label">📱 Prototypes iOS</p>
+      </div>
+      <div class="stat">
+        <div class="counter" data-target="6">0</div>
+        <p class="counter-label">🛠️ Projets freelance</p>
+      </div>
+      <div class="stat">
+        <div class="counter" data-target="10">0</div>
+        <p class="counter-label">🧩 Templates créés</p>
+      </div>
+    </section>
 
+    <section class="stats-explanation fade-in">
+      <h2>📊 Explication des statistiques</h2>
+      <details>
+        <summary>🚀 Sites publiés</summary>
+        <p>Sites mis en ligne : portfolio, projets clients, démos, etc. Montre ta maîtrise du déploiement web.</p>
+      </details>
+      <details>
+        <summary>🧠 IA intégrées</summary>
+        <p>Intégration d'intelligences artificielles comme ChatGPT, assistants vocaux, IA locales (LLaMA, Mistral), etc.</p>
+      </details>
+      <details>
+        <summary>🎨 Univers graphiques créés</summary>
+        <p>Création d'interfaces, animations, effets, dark mode, design UI/UX immersif avec ta propre touche artistique.</p>
+      </details>
+      <details>
+        <summary>📱 Prototypes iOS</summary>
+        <p>Projets développés sur Xcode (SwiftUI) incluant des assistants, animations, UI futuristes et domotique.</p>
+      </details>
+      <details>
+        <summary>🛠️ Projets freelance</summary>
+        <p>Sites vitrine, refonte visuelle, projets clients en auto-entreprise avec maquettes, devis et livraison.</p>
+      </details>
+      <details>
+        <summary>🧩 Templates créés</summary>
+        <p>Composants HTML/CSS/JS réutilisables : boutons animés, menus, sections stylées, dark mode, etc.</p>
+      </details>
+    </section>
 
-
-  <footer class="site-footer">
-    <p>🚀 Merci de ta visite !</p>
-    <div class="socials">
-      <a href="https://www.instagram.com/studio.rapido?igsh=MWg5a3o3eThiMDl0eA%3D%3D&utm_source=qr">📸 Instagram</a> | <a href="https://www.tiktok.com/@studio.rapido?_t=ZN-8xcQ7gPmRjq&_r=1">🎵 TikTok</a>
-    </div>
-    <p style="margin-top: 1rem;">© 2025 Studio Rapido — Tous droits réservés.</p>
-  </footer>
+    <footer class="site-footer">
+      <p>🚀 Merci de ta visite !</p>
+      <div class="socials">
+        <a href="https://www.instagram.com/studio.rapido?igsh=MWg5a3o3eThiMDl0eA%3D%3D&utm_source=qr">📸 Instagram</a> | <a href="https://www.tiktok.com/@studio.rapido?_t=ZN-8xcQ7gPmRjq&_r=1">🎵 TikTok</a>
+      </div>
+      <p style="margin-top: 1rem;">© 2025 Studio Rapido — Tous droits réservés.</p>
+    </footer>
+  </div>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script>
   ScrollReveal().reveal('section', {
@@ -483,14 +483,16 @@
     <img src="assets/logo-seo.png" alt="Logo Studio Rapido" width="512" height="512" style="display:none;" />
   </section>
 </script>
+</script>
+</script>
 <script>
-    const toggleBtn = document.getElementById('menu-toggle');
-    const navList = document.querySelector('#main-nav ul');
+  const toggleBtn = document.getElementById('menu-toggle');
+  const pageContent = document.getElementById('page-content');
 
-    toggleBtn.addEventListener('click', () => {
-      navList.classList.toggle('show');
-      toggleBtn.textContent = navList.classList.contains('show') ? '✖' : '☰';
-    });
+  toggleBtn.addEventListener('click', () => {
+    pageContent.classList.toggle('hidden');
+    toggleBtn.textContent = pageContent.classList.contains('hidden') ? '☰' : '✖';
+  });
 </script>
 </body>
 <style>
